Fix nav active bug

--- a/templates/base.html
+++ b/templates/base.html
@@ -113,7 +113,7 @@
         })
     </script>
 
-    <script>
+    <!-- <script>
         const navLinkEls = document.querySelectorAll('.nav-link');
         const windowPathname = window.location.pathname;
 
@@ -122,7 +122,7 @@
                 navLinkEl.classList.add('active');
             }
         })
-    </script>
+    </script> -->
 
 
     {% endblock %}
