--- a/templates/includes/cat-nav.html
+++ b/templates/includes/cat-nav.html
@@ -3,16 +3,20 @@
          <div class="collapse navbar-collapse" id="catNavContent">
              <ul class="navbar-nav ms-auto mb-2 mb-lg-0 w-100 
                         justify-content-center flex-wrap">
+                {% with url_path=request.get_full_path %}
                  <li class="nav-item">
-                    <a class="nav-link" href="{% url 'products' %}?category=Bratwurst">Bratwurst</a>
+                    <a class="nav-link {% if url_path == '/menu/?category=Bratwurst' %}active{% endif %}"
+                        href="{% url 'products' %}?category=Bratwurst">Bratwurst</a>
                     <!-- <a class="nav-link" href="/menu/#bratwursts">Bratwurst</a> -->
                  </li>
                  <li class="nav-item">
-                     <a class="nav-link" href="{% url 'products' %}?category=Chicken">Chicken</a>
+                     <a class="nav-link {% if url_path == '/menu/?category=Chicken' %}active{% endif %}"
+                         href="{% url 'products' %}?category=Chicken">Chicken</a>
                      <!-- <a class="nav-link" href="/menu/#currywursts">Currywurst</a> -->
                  </li>
                  <li class="nav-item me-2">
-                     <a class="nav-link" href="{% url 'products' %}?category=Burger">Burgers</a>
+                     <a class="nav-link {% if url_path == '/menu/?category=Burger' %}active{% endif %}"
+                         href="{% url 'products' %}?category=Burger">Burgers</a>
                      <!-- <a class="nav-link" href="/menu/#burgers">Burgers</a> -->
                  </li>
                  <li>
@@ -23,6 +27,7 @@
                              type="submit">Search</button>
                      </form>
                  </li>
+                {% endwith %}
              </ul>
          </div>
      </div>
