--- a/faq/templates/faq/faq.html
+++ b/faq/templates/faq/faq.html
@@ -105,6 +105,7 @@
                 data-bs-parent="#faqAccordion">
                 <div class="accordion-body border-0">
                     {% for answer in question.question_answer.all %}
+                    <!-- {{ question.question_answer.all }} -->
                         {% if answer.status == 1 %}
                         <p>{{ answer.body | safe }}</p>
                             {% if user.is_authenticated %}
@@ -119,7 +120,6 @@
                                             value="{{ answer.id }}"><i class="fa-regular fa-thumbs-up"></i>
                                         </button>
                                      {% endif %}
-                                     
                                     <!-- <input type="hidden" name="next" value=" {{ answer.id }}"> -->
                                 </form>
                                 <span class="d-inline-block mb-3" >Liked by {{ answer.like.all.count }}
@@ -134,6 +134,7 @@
                         
                         {% endif %}
                     {% endfor %}
+
 
                     {% if user.is_authenticated %}
                     <form action="{% url 'answer' question.id %}" method="post">
@@ -158,6 +159,8 @@
     </form>
 </div>
 {% endif %}
+
+
 {% endblock %}
 
 {% block postloadjs %}
