Style checkout link in tost_success

--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -30,7 +30,7 @@
                     Total: £{{ total|floatformat:2 }}
                 </p>
             </strong>
-            <a href="{% url 'view_cart' %}" class="btn btn-block rounded-0">
+            <a href="{% url 'view_cart' %}" class="btn btn-primary btn-block">
                 <span class="text-uppercase">Go To Secure Checkout</span>
                 <i class="fas fa-lock"></i>
             </a>
