--- a/templates/includes/cat-nav.html
+++ b/templates/includes/cat-nav.html
@@ -5,16 +5,16 @@
                         justify-content-center flex-wrap">
                 {% with url_path=request.get_full_path %}
                  <li class="nav-item">
-                    <a class="nav-link {% if url_path == '/menu/?category=Bratwurst' %}active{% endif %}"
-                        href="{% url 'products' %}?category=Bratwurst">Bratwurst</a>
+                    <a class="nav-link {% if url_path == '/menu/?category=bratwurst' %}active{% endif %}"
+                        href="{% url 'products' %}?category=bratwurst">Bratwurst</a>
                  </li>
                  <li class="nav-item">
-                     <a class="nav-link {% if url_path == '/menu/?category=Chicken' %}active{% endif %}"
-                         href="{% url 'products' %}?category=Chicken">Chicken</a>
+                     <a class="nav-link {% if url_path == '/menu/?category=chicken' %}active{% endif %}"
+                         href="{% url 'products' %}?category=chicken">Chicken</a>
                  </li>
                  <li class="nav-item me-2">
-                     <a class="nav-link {% if url_path == '/menu/?category=Burger' %}active{% endif %}"
-                         href="{% url 'products' %}?category=Burger">Burgers</a>
+                     <a class="nav-link {% if url_path == '/menu/?category=burger' %}active{% endif %}"
+                         href="{% url 'products' %}?category=burger">Burgers</a>
                  </li>
                  <li>
                      <form class="d-flex" role="search" method="GET" action="{% url 'products' %}">
