--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -99,13 +99,15 @@
                 </table>
             </div>
             {% else %}
-            <p class="lead mb-5">Your cart is empty.</p>
-            <a href="{% url 'products' %}" class="btn btn-cta mb-3">
-                <span class="icon">
-                    <i class="fas fa-chevron-left"></i>
-                </span>
-                <span class="text-uppercase">Keep Shopping</span>
-            </a>
+            <div class="border border-dark border-3 p-3">
+                <p class="lead mb-5">Your cart is empty.</p>
+                <a href="{% url 'products' %}" class="btn btn-cta mb-3">
+                    <span class="icon">
+                        <i class="fas fa-chevron-left"></i>
+                    </span>
+                    <span class="text-uppercase">Keep Shopping</span>
+                </a>
+            </div>
             {% endif %}
         </div>
     </div>
