Update faq p text

--- a/faq/templates/faq/faq.html
+++ b/faq/templates/faq/faq.html
@@ -78,10 +78,7 @@
     {% else %}
     PLEASE LOG IN TO INTERACT 
     {% endif %}
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate id 
-        porro adipisci quas iste error ea vero recusandae, laboriosam corrupti, 
-        tempore necessitatibus maiores ipsam praesentium ut? Aspernatur, eaque. 
-        Dolorem, placeat.</p>
+    <p>Your question may already have an answer! Check below.</p>
 
     <!-- CORRECT ARIA-CONTROLS VALUE??????????????????????????? -->
     <button class="btn btn-primary border border-dark border-5 border-bottom-0" onclick="toggleFaq()" id="faqToggle"
