--- a/faq/templates/faq/faq.html
+++ b/faq/templates/faq/faq.html
@@ -102,7 +102,10 @@
                 data-bs-parent="#faqAccordion">
                 <div class="accordion-body border-0">
                     {% if not question.question_answer.all %}
-                        SOZ, NO ANSWER YET!
+                        <p>This question hasn't had an approved answer yet. <a
+                                href="{% url 'account_login' %}">Login</a>
+                            or <a href="{% url 'account_signup' %}">Signup</a> to submit an answer!
+                        </p>
                     {% endif %}
                     {% for answer in question.question_answer.all %}
                         {% if answer.status == 1 %}
