Add img of issue to static/images/readme/bugs

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -73,7 +73,8 @@ vegetarian, veg, food for events, best in Sheffield">
             </div>
         </div>
         <div class="col-1">
-            <img src="{{ MEDIA_URL }}hero-burger.png" class="hero-img" alt="A delicous looking double cheese burger">
+            <img src="{{ MEDIA_URL }}hero-burger.png" class="hero-img"
+                alt="A delicous looking double cheese burger">
         </div>   
     </div> 
 </section>
