Add media query for .hero-txt

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -62,7 +62,7 @@ vegetarian, veg, food for events, best in Sheffield">
 {% block content %}
 <section class="container-fluid ps-3 ps-md-5">
     <div class="row">
-        <div class="col-6">
+        <div class="col-6" id="hero-txt">
             <h1 class="py-3">Banging <span class="secondary-color">BRATWURSTS.</span></h1>
             <h1 class="py-3">Proper <span class="secondary-color">CHICKEN.</span></h1>
             <h1 class="py-3">And now.......<br><span class="secondary-color">BURGERS.</span></h1>
