--- a/static/css/base.css
+++ b/static/css/base.css
@@ -100,7 +100,6 @@ h6 {
 
 .btn-primary {
   --bs-btn-color: var(--gw-dark);
-  /* --bs-btn-bg: var(--gw-btn-main); */
   --bs-btn-bg: var(--gw-btn-main);
   --bs-btn-border-color: var(--gw-dark);
   --bs-btn-hover-color: #fff;
@@ -118,7 +117,6 @@ h6 {
 
 .btn-secondary {
   --bs-btn-color: var(--gw-dark);
-  /* --bs-btn-bg: var(--gw-primary-lighter-color); */
   --bs-btn-bg: #7BF1A8;
   --bs-btn-border-color: var(--gw-dark);
   --bs-btn-hover-color: #fff;
@@ -160,11 +158,6 @@ h6 {
   width: 100%;
   height: 42px;
 }
-
-/* form input {
-  border: 3px solid var(--gw-dark);
-  width: 100%
-} */
 
 .card {
   --bs-card-border-color: var(--gw-dark);
@@ -254,7 +247,6 @@ body {
 .hero-img {
   height:60vh;
   max-height: 400px;
-  /* transform: translateX(-25%); */
 }
 
 .thick-border {
@@ -288,15 +280,12 @@ h4 {
 h5 {
   font-size: clamp(1.25rem, 1.2206rem + 0.1471vw, 1.3125rem);
 }
-/* 
-.active {
-  color: #DD6031 !important;
-} */
 
 .qty_input {
-  /* background-color: pink; */
   min-width: 26px !important;
 }
+
+
 /* Stripe */
 .stripe-style-input,
 .StripeElement {
@@ -309,11 +298,15 @@ h5 {
   }
 }
 
+@media only screen and (min-width: 576px) {
+  #hero-txt {
+    padding-left: 10vw;
+  }
+}
+
 @media only screen and (max-width: 767px) {
   .qty_input {
-    /* background-color: pink; */
     min-width: 26px !important;
     padding: 0 !important;
-    /* margin: 0 !important; */
   }
 }
