--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -94,7 +94,7 @@
                 <span class="text-uppercase">Back to Profile</span>
             </a>
             {% else %}
-            <a href="{% url 'home' %}" class="btn rounded-0 my-2">
+            <a href="{% url 'home' %}" class="btn btn-primary my-2">
                 <span class="icon mr-2">
                     <i class="fas fa-gifts"></i>
                 </span>
