Correct .sm-no-border media query

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -300,7 +300,13 @@ h5 {
 
 @media only screen and (min-width: 576px) {
   #hero-txt {
-    padding-left: 10vw;
+    border: 0px solid !important;
+  }
+}
+
+@media only screen and (max-width: 575px) {
+  .sm-no-border {
+    border: 0px solid !important;
   }
 }
 
@@ -310,3 +316,5 @@ h5 {
     padding: 0 !important;
   }
 }
+
+
