--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -60,7 +60,7 @@ vegetarian, veg, food for events, best in Sheffield">
 {% endblock %}
 {% block extra_title %}Home{% endblock %}
 {% block content %}
-<section class="container-fluid p-3 p-md-5">
+<section class="container-fluid">
     <div class="row">
         <div class="col-6" id="hero-txt">
             <h1 class="py-3">Banging <span class="secondary-color">BRATWURSTS.</span></h1>
