--- a/templates/includes/cat-nav.html
+++ b/templates/includes/cat-nav.html
@@ -1,7 +1,7 @@
- <nav class="navbar navbar-expand mb-5">
+ <nav class="navbar navbar-expand mb-3 mb-lg-5">
      <div class="container-fluid">
          <div class="collapse navbar-collapse" id="catNavContent">
-             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 w-100 
+             <ul class="navbar-nav ms-auto mb-lg-0 w-100 
                         justify-content-center flex-wrap">
                 {% with url_path=request.get_full_path %}
                  <li class="nav-item">
