--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,49 +1,95 @@
 :root{
+  /* Colours */
   --gw-primary-color: #EFC102;
   --gw-primary-lighter-color: #F0E582;
-  --gw-secondary-color: #7BF1A8;
   --gw-dark: #090C08;
-  --gw-btn-txt: #709255;
 
+  /* CTA Button */
   --gw-cta-btn-main: #FF6F59;
   --gw-cta-btn-dark: #D64C3A;
   --gw--cta-btn-darker: #AE261D;
-  --gw-cta-btn-darkest: #860000;
+  /* --gw-cta-btn-darkest: #860000; */
   
+  /* Primary Btn */
   --gw-btn-main: #9DD9D2;
   --gw-btn-dark: #71ABA5;
   --gw-btn-darker: #46807A;
   --gw-btn-darkest: #1A5751;
 
+  /* Links */
   --gw-link: #7EB2DD;
   --gw-link-visited: #2F6990;
   --gw-link-hover: #578DB6;
 
+  /* Typography */
   --gw-font-size: clamp(1rem, 0.3077rem + 3.0769vw, 3rem);
   --gw-font-size-2: clamp(1.625rem, 0.5rem + 5vw, 4.875rem);
   --gw-font-size-1: clamp(2.625rem, 0.8077rem + 8.0769vw, 7.875rem);
   --gw-font-size-: clamp(4.25rem, 1.3077rem + 13.0769vw, 12.75rem);
 }
 
-.toast-header {
-  background-color: var(--gw-primary-lighter-color);
+/* General */
+* {
+  box-sizing: border-box;
+}
+
+html {
+  height: 100%;
+}
+
+.thin-border {
+  border: 3px solid var(--gw-dark);
+}
+
+.thick-border {
+  border: 5px solid var(--gw-dark);
 }
 
 .select {
   border: 3px solid var(--gw-dark);
 }
 
-.modal-content {
-  border-radius: 0;
-  border: 5px solid var(--gw-dark);
-}
 
+/* Colours */
 .secondary-color {
   color: var(--gw-btn-main);
 }
 
-.thin-border {
-  border: 3px solid var(--gw-dark);
+#footer {
+  background-color: var(--gw-primary-color);
+}
+
+
+/* Typography */
+body {
+  font-family: 'PT Sans', sans-serif;
+}
+.nav-link {
+  font-size: clamp(1.025rem, 0.9897rem + 0.1765vw, 1.1rem);
+}
+
+p {
+  font-size: clamp(1rem, 0.7647rem + 1.1765vw, 1.5rem);
+}
+
+h1 {
+  font-size: clamp(2rem, 1.7647rem + 1.1765vw, 2.5rem);
+}
+
+h2 {
+  font-size: clamp(1.6875rem, 1.5404rem + 0.7353vw, 2rem);
+}
+
+h3 {
+  font-size: clamp(1.5625rem, 1.4743rem + 0.4412vw, 1.75rem);
+}
+
+h4 {
+  font-size: clamp(1.375rem, 1.3162rem + 0.2941vw, 1.5rem);
+}
+
+h5 {
+  font-size: clamp(1.25rem, 1.2206rem + 0.1471vw, 1.3125rem);
 }
 
 h1,
@@ -55,28 +101,8 @@ h6 {
   font-family: 'Paytone One', sans-serif;
 }
 
-.accordion-item:first-of-type .accordion-button {
-  border-radius: 0;
-}
 
-.accordion-button {
-  background-color: var(--gw-primary-lighter-color) !important;
-}
-
-.accordion {
-  --bs-accordion-border-color: var(--gw-dark);
-
-}
-
-.accordion-body :last-child > hr {
-  display: none;
-}
-
-.accordion-item,
-.accordion-button {
-  border-radius: 0 !important;
-}
-
+/* Buttons */
 .btn {
   --bs-btn-border-radius: 0;
   --bs-btn-border-color: var(--gw-dark);
@@ -132,15 +158,120 @@ h6 {
   --bs-btn-disabled-border-color: var(--gw-btn-main);
 }
 
-.form-control {
+
+/* Links */
+a.nav-link {
   color: var(--gw-dark);
-  border: 3px solid var(--gw-dark);
+}
+
+a:link {
+  color: var(--gw-link);
+}
+
+a:visited {
+  color: #800080;
+}
+
+a:hover {
+  color: var(--gw-link-hover);
+}
+
+a.nav-link {
+  color: var(--gw-dark);
+}
+
+a.nav-link:hover,
+.active {
+  color: #DD6031 !important;
+}
+
+.navbar {
+  background-color: var(--gw-primary-color);
+}
+
+.nav-link a {
+  color: var(--gw-dark);
+}
+
+#footer a {
+  color: var(--gw-dark);
+}
+
+
+/* Accesibility */
+abbr {
+  border-bottom: none !important;
+  cursor: inherit !important;
+  text-decoration: none !important;
+}
+
+
+/* Accordion */
+.accordion-item:first-of-type .accordion-button {
   border-radius: 0;
+}
+
+.accordion-button {
+  background-color: var(--gw-primary-lighter-color) !important;
+}
+
+.accordion {
+  --bs-accordion-border-color: var(--gw-dark);
+}
+
+.accordion-body :last-child>hr {
+  display: none;
+}
+
+.accordion-item,
+.accordion-button {
+  border-radius: 0 !important;
 }
 
 .dropdown-menu {
   border-radius: 0;
   border: 3px solid var(--gw-dark);
+}
+
+
+/* Card */
+.card {
+  --bs-card-border-color: var(--gw-dark);
+  --bs-card-border-width: 5px;
+  --bs-card-border-radius: 0;
+}
+
+.card-img {
+  border-radius: 0;
+}
+
+.card-img {
+  width: 100%;
+  height: 40vh;
+  object-fit: cover;
+  max-height: 200px;
+  min-width: 100px;
+}
+
+
+/* Modal */
+.modal-content {
+  border-radius: 0;
+  border: 5px solid var(--gw-dark);
+}
+
+
+/* Toast */
+.toast-header {
+  background-color: var(--gw-primary-lighter-color);
+}
+
+
+/* Form */
+.form-control {
+  color: var(--gw-dark);
+  border: 3px solid var(--gw-dark);
+  border-radius: 0;
 }
 
 .form-comtrol-pend {
@@ -152,137 +283,15 @@ h6 {
   border: 3px solid var(--gw-dark);
 }
 
+.form-check-input[type=checkbox] {
+  border-radius: 0;
+}
+
 /* WHT NEEDED?? WHY DIFFERENTLY STYLED TO SIGN IN FORM??????z */
 #signup_form p input {
   border: 3px solid var(--gw-dark);
   width: 100%;
   height: 42px;
-}
-
-.card {
-  --bs-card-border-color: var(--gw-dark);
-  --bs-card-border-width: 5px;
-  --bs-card-border-radius: 0;
-}
-
-.card-img {
-  border-radius: 0;
-}
-
-.form-check-input[type=checkbox] {
-  border-radius: 0;
-}
-
-a.nav-link {
-  color: var(--gw-dark);
-}
-/* links */
-
-a:link {
-    color: var(--gw-link);
-}
-
-a:visited {
-  color: #800080;
-}
-
-a:hover {
-    color: var(--gw-link-hover);
-}
-
-a.nav-link {
-  color: var(--gw-dark);
-} 
-
-a.nav-link:hover,
-.active {
-  color: #DD6031 !important;
-}
-
-#footer {
-  background-color: var(--gw-primary-color);
-}
-
-.navbar {
-  background-color: var(--gw-primary-color);
-}
-
-.nav-link a {
-  color: var(--gw-dark);
-}
-
-
-
-#footer a {
-  color: var(--gw-dark);
-}
-
-
-*{
-  box-sizing: border-box;
-}
-
-html {
-  height: 100%;
-}
-
-abbr {
-  border-bottom: none !important;
-  cursor: inherit !important;
-  text-decoration: none !important;
-}
-
-body {
-    font-family: 'PT Sans', sans-serif;
-}
-
-.card-img {
-    width: 100%;
-    height: 40vh;
-    object-fit: cover;
-    max-height: 200px;
-    min-width: 100px;
-}
-
-.hero-img {
-  height:60vh;
-  max-height: 400px;
-}
-
-.thick-border {
-  border: 5px solid var(--gw-dark);
-}
-
-.nav-link {
-  font-size: clamp(1.025rem, 0.9897rem + 0.1765vw, 1.1rem);
-}
-
-p {
-  font-size: clamp(1rem, 0.7647rem + 1.1765vw, 1.5rem);
-}
-
-h1 {
-  font-size: clamp(2rem, 1.7647rem + 1.1765vw, 2.5rem);
-}
-
-h2 {
-  font-size: clamp(1.6875rem, 1.5404rem + 0.7353vw, 2rem);
-}
-
-h3 {
-  font-size: clamp(1.5625rem, 1.4743rem + 0.4412vw, 1.75rem);
-}
-
-h4 {
-  font-size: clamp(1.375rem, 1.3162rem + 0.2941vw, 1.5rem);
-}
-
-h5 {
-  font-size: clamp(1.25rem, 1.2206rem + 0.1471vw, 1.3125rem);
-}
-
-.qty_input {
-  min-width: 26px !important;
 }
 
 
@@ -291,6 +300,20 @@ h5 {
 .StripeElement {
   border: 3px solid var(--gw-dark) !important;
 }
+
+
+/* Misc */
+.hero-img {
+  height: 60vh;
+  max-height: 400px;
+}
+
+.qty_input {
+  min-width: 26px !important;
+}
+
+
+/* Media Queries */
 
 @media only screen and (max-width: 370px) {
   #nav-logo {
