Remove facebook border classes from cards and add .border-think to menu cards

--- a/products/templates/products/includes/menu-card.html
+++ b/products/templates/products/includes/menu-card.html
@@ -1,33 +1,5 @@
-<!-- {% if product.category|slugify == 'bratwurst' %}
-    {% if forloop.first %}
-        <h1>Bratwurst</h1>
-        <p> BRATTY Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa cupiditate eligendi deserunt architecto rem dictased voluptates,
-                laudantium omnis excepturi exercitationem. Minus necessitatibus vitae explicabo molestiae quis consequatur earum
-                placeat.
-        </p>
-    {% endif %}
-{% elif product.category|slugify == 'currywurst' %}
-    {% if forloop.first %}
-        <h1>Currywurst</h1>
-        <p> CURRY Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa cupiditate eligendi deserunt architecto
-            rem dictased voluptates,
-            laudantium omnis excepturi exercitationem. Minus necessitatibus vitae explicabo molestiae quis consequatur earum
-            placeat.
-        </p>
-    {% endif %}
-{% elif product.category|slugify == 'burger' %} 
-    {% if forloop.first %}
-        <h1>Currywurst</h1>
-        <p> BURGER Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa cupiditate eligendi deserunt architecto
-            rem dictased voluptates,
-            laudantium omnis excepturi exercitationem. Minus necessitatibus vitae explicabo molestiae quis consequatur earum
-            placeat.
-        </p>
-    {% endif %}
-{% endif %} -->
-
 <div class="col-md-6 col-lg-4 mb-3">
-    <div class="card">
+    <div class="card thick-border">
         <div class="card-body">
             <div class="image-container">
                 <!-- ADD ARIA LABEL -->
