Remove bnootstrap border-3 classes and use .border-thin

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -99,7 +99,7 @@
                 </table>
             </div>
             {% else %}
-            <div class="border border-dark border-3 p-3">
+            <div class="thin-border p-3">
                 <p class="lead mb-5">Your cart is empty.</p>
                 <a href="{% url 'products' %}" class="btn btn-cta mb-3">
                     <span class="icon">
