--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -17,7 +17,7 @@
     </div>
     <div class="row">
         <div class="col-12 col-lg-7"></div>
-        <div class="p-2 border border-dark border-5">
+        <div class="p-2 thick-border">
             <div class="row">
                 <div class="col">
                     <small class="text-muted">Order Info:</small>
