--- a/products/templates/products/custom_widget_templates/custom_clearable_file_input.html
+++ b/products/templates/products/custom_widget_templates/custom_clearable_file_input.html
@@ -14,7 +14,7 @@
 {% endif %}<br>
 {{ widget.input_text }}
 {% endif %}
-<span class="btn rounded-0 border border-dark border-3">
+<span class="btn thin-border">
     Select Image <input id="new-image" type="{{ widget.type }}" 
         name="{{ widget.name }}"
         {% include "django/forms/widgets/attrs.html" %}>
