--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container header-container">
     <div class="row">
-        <div class="mx-auto border border-5 border-dark sm-no-border">
+        <div class="mx-auto thick-border sm-no-border">
             <div class="allauth-form-inner-content">
                 {% block inner_content %}
                 {% endblock %}
