--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block content %}
-<div class="border border-dark border-5 w-50 mx-auto p-2">
+<div class="thick-border w-50 mx-auto p-2">
 <h1>{% trans "Sign Out" %}</h1>
 
 <p>{% trans 'Are you sure you want to sign out?' %}</p>
