--- a/templates/errors/403.html
+++ b/templates/errors/403.html
@@ -6,7 +6,7 @@
 {% load static %}
 {% block content %}
 
-<div class="col-7 col-md-6 my-auto mx-auto p-3 border border-5 border-dark">
+<div class="col-7 col-md-6 my-auto mx-auto p-3 thick-border">
     <h1 class="display-4">
         Sorry! Looks like you've ended up somewhere not quite meant for you!
     </h1>
