--- a/faq/templates/faq/faq.html
+++ b/faq/templates/faq/faq.html
@@ -81,12 +81,12 @@
     <p>Your question may already have an answer! Check below.</p>
 
     <!-- CORRECT ARIA-CONTROLS VALUE??????????????????????????? -->
-    <button class="btn btn-primary border border-dark border-5 border-bottom-0" onclick="toggleFaq()" id="faqToggle"
+    <button class="btn btn-primary thick-border border-bottom-0" onclick="toggleFaq()" id="faqToggle"
         type="button" data-bs-toggle="collapse"
         data-bs-target=".multi-collapse" aria-expanded="false" aria-controls="accordion-item">Expand All
     </button>
 
-    <div class="accordion border border-5 border-dark" id="faqAccordion">
+    <div class="accordion thick-border" id="faqAccordion">
         {% for question in questions %}
         <div class="accordion-item">
             <h2 class="accordion-header" id="heading{{question.id}}">
