--- a/products/templates/products/detail.html
+++ b/products/templates/products/detail.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 
-<div class="card border border-5 border-dark w-75 mx-auto">
+<div class="card thick-border w-75 mx-auto">
     <div class="row g-0">
         <div class="col-md-4">
             <img src="{{ product.image.url }}" class="img-fluid h-100 p-3" alt="{{ product.name }}">
