--- a/templates/allauth/account/email_confirm.html
+++ b/templates/allauth/account/email_confirm.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 <!-- change style -->
-<div class="container border border-5 border-dark sm-no-border p-4">
+<div class="container thick-border sm-no-border p-4">
 <h1>{% trans "Confirm E-mail Address" %}</h1>
 
 {% if confirmation %}
