--- a/templates/errors/500.html
+++ b/templates/errors/500.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 
-<div class="col-7 col-md-6 my-auto mx-auto p-3 border border-5 border-dark">
+<div class="col-7 col-md-6 my-auto mx-auto p-3 thick-border">
     <h1 class="display-4">
         Sorry! Something went wrong!
     </h1>
