--- a/templates/includes/cat-nav.html
+++ b/templates/includes/cat-nav.html
@@ -20,7 +20,7 @@
                      <form class="d-flex" role="search" method="GET" action="{% url 'products' %}">
                          <input class="form-control rounded-0" type="search" placeholder="Search"
                              aria-label="Search" name="q">
-                         <button class="btn btn-primary border border-dark border-3 border-start-0"
+                         <button class="btn btn-primary thin-border border-start-0"
                              type="submit">Search</button>
                      </form>
                  </li>
