Add .ms-0 to select image span in customable_clearble_file_input template

--- a/products/templates/products/custom_widget_templates/custom_clearable_file_input.html
+++ b/products/templates/products/custom_widget_templates/custom_clearable_file_input.html
@@ -14,8 +14,8 @@
 {% endif %}<br>
 {{ widget.input_text }}
 {% endif %}
-<span class="btn thin-border">
-    Select Image <input id="new-image" type="{{ widget.type }}" 
+<span class="btn thin-border w-100 text-start">
+    Select Image <input type="{{ widget.type }}" class="ms-0" 
         name="{{ widget.name }}"
         {% include "django/forms/widgets/attrs.html" %}>
 </span>
