--- a/static/css/base.css
+++ b/static/css/base.css
@@ -235,7 +235,7 @@ abbr {
 }
 
 /* Forms */
-.form-comtrol-pend {
+.form-control-pend {
   background-color: var(--gw-primary-lighter-color);
   border: 3px solid var(--gw-dark);
 }
