--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -7,44 +7,48 @@
 
 {% block inner_content %}
 
-<h1>{% trans "Sign In" %}</h1>
+<div class="thick-border">
 
-{% get_providers as socialaccount_providers %}
+  <h1>{% trans "Sign In" %}</h1>
 
-{% if socialaccount_providers %}
-<p>{% blocktrans with site.name as site_name %}Please sign in with one
-  of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
-  for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
+  {% get_providers as socialaccount_providers %}
 
-<!-- <div class="socialaccount_ballot">
-  <div class="login-or">{% trans 'or' %}</div>
-</div> -->
+  {% if socialaccount_providers %}
+  <p>{% blocktrans with site.name as site_name %}Please sign in with one
+    of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
+    for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 
-{% include "socialaccount/snippets/login_extra.html" %}
+  <!-- <div class="socialaccount_ballot">
+    <div class="login-or">{% trans 'or' %}</div>
+  </div> -->
 
-{% else %}
-<p>{% blocktrans %}If you have not created an account yet, then please
-  <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
-{% endif %}
+  {% include "socialaccount/snippets/login_extra.html" %}
 
-<button class="btn btn-primary mb-3">
-  <a href="{% provider_login_url 'google'%}?next=/">
-    <i class="fab fa-google"></i>
-    Login with Google
-  </a>
-</button>
-
-<form class="login" method="POST" action="{% url 'account_login' %}">
-  {% csrf_token %}
-  {{ form|crispy }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+  {% else %}
+  <p>{% blocktrans %}If you have not created an account yet, then please
+    <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
   {% endif %}
-  <a class="btn btn-primary" href="{% url 'home' %}">Home</a>
-  <button class="btn btn-cta" type="submit">{% trans "Sign In" %}</button>
-  <p class="mt-2">
-    <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-  </p>
-</form>
+
+  <button class="btn btn-primary mb-3">
+    <a href="{% provider_login_url 'google'%}?next=/">
+      <i class="fab fa-google"></i>
+      Login with Google
+    </a>
+  </button>
+
+  <form class="login" method="POST" action="{% url 'account_login' %}">
+    {% csrf_token %}
+    {{ form|crispy }}
+    {% if redirect_field_value %}
+    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+    {% endif %}
+    <a class="btn btn-primary" href="{% url 'home' %}">Home</a>
+    <button class="btn btn-cta" type="submit">{% trans "Sign In" %}</button>
+    <p class="mt-2">
+      <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+    </p>
+  </form>
+
+</div>
 
 {% endblock %}
