Add thick-border or thin-border to all required elements

--- a/products/templates/products/includes/menu-card.html
+++ b/products/templates/products/includes/menu-card.html
@@ -37,7 +37,7 @@
                     aria-labelledby="deleteProductModalLabel{{ product.id }}"
                     aria-hidden="true">
                     <div class="modal-dialog">
-                        <div class="modal-content">
+                        <div class="modal-content thick-border">
                             <div class="modal-header">
                                 <h1 class="modal-title fs-5" id="deleteProductModalLabel{{ product.id }}">Confirm Deletion
                                 </h1>
