--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -5,7 +5,7 @@
 {% block extra_title %}Checkout{% endblock %}
 {% block content %}
 <!-- template adapted from code institute boutique ado walkthrough -->
-<div class="container mb-2 border thick-border col-10">
+<div class="container mb-2 thick-border col-10">
     <h2>Checkout</h2>
     <div class="row">
         <div class="col-12 mb-5">
