--- a/events/templates/events/all.html
+++ b/events/templates/events/all.html
@@ -40,7 +40,7 @@ opera">
     <div class="row">
         {% for event in events %}
             <div class="col-md-6 col-lg-4">
-                <div class="card mb-4">
+                <div class="card mb-4 thick-border">
                     <div class="card-body">
                         <div class="image-container">
                             <a href="{{ event.link }}" target="_blank" rel="noopener"
