--- a/products/templates/products/detail.html
+++ b/products/templates/products/detail.html
@@ -27,7 +27,7 @@
                             <div class="form-group w-75">
                                 <div class="input-group">
                                     <div class="input-group-prepend">
-                                        <button class="decrement-qty btn form-comtrol-pend
+                                        <button class="decrement-qty btn form-control-pend
                                      rounded-0" data-item_id="{{ product.id }}"
                                             id="decrement-qty_{{ product.id }}">
                                                 <i class="fas fa-minus"></i>
@@ -38,7 +38,7 @@
                                         id="id_qty_{{ product.id }}">
                                     <div class="input-group-append"> 
                                         <button class="increment-qty btn
-                                     form-comtrol-pend" data-item_id="{{ product.id }}"
+                                     form-control-pend" data-item_id="{{ product.id }}"
                                             id="increment-qty_{{ product.id }}">
                                                 <i class="fas fa-plus"></i>
                                         </button>
