--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -7,8 +7,6 @@
 
 {% block inner_content %}
 
-<div class="thick-border">
-
   <h1>{% trans "Sign In" %}</h1>
 
   {% get_providers as socialaccount_providers %}
@@ -18,9 +16,9 @@
     of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
     for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 
-  <!-- <div class="socialaccount_ballot">
+  <div class="socialaccount_ballot">
     <div class="login-or">{% trans 'or' %}</div>
-  </div> -->
+  </div>
 
   {% include "socialaccount/snippets/login_extra.html" %}
 
@@ -48,7 +46,5 @@
       <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
     </p>
   </form>
-
-</div>
 
 {% endblock %}
