Clean cart/contexts.py

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -72,9 +72,9 @@ vegetarian, veg, food for events, best in Sheffield">
                 </h4>
             </div>
         </div>
-        <div class="col-6 overflow-hidden">
+        <!-- <div class="col-6 overflow-hidden">
             <img src="{{ MEDIA_URL }}hero-burger.png" class="hero-img" alt="A delicous looking double cheese burger">
-        </div>   
+        </div>    -->
     </div> 
 </section>
 
