--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -53,7 +53,7 @@
                                             </button>
                                         </div>
                                         <input class="thin-border form-control form-control-sm qty_input" type="number"
-                                            name="quantity" value="{{ item.quantity }}" min="1" max="15"
+                                            name="quantity" value="{{ item.quantity }}" min="1" max="9"
                                             data-item_id="{{ item.item_id }}" id="id_qty_{{ item.item_id }}">
                                         <div class="input-group-append">
                                             <button class="increment-qty btn form-control-pend border-start-0"
@@ -66,8 +66,8 @@
                                     </div>
                                 </div>
                             </form>
-                            <a class="text-info" role='button'><small>Update</small></a>
-                            <a class="text-danger" role='button'
+                            <a class="update-link text-info" role='button'><small>Update</small></a>
+                            <a class="text-danger remove-item" role='button'
                                 id="remove_{{ item.item_id }}"><small>Remove</small></a>
                         </td>
                         <td class="py-3 w-25">
@@ -136,7 +136,7 @@
         };
 
         $.post(url, data)
-            .done(function () {
+            .done(function() {
                 location.reload();
             });
     })
