--- a/static/css/base.css
+++ b/static/css/base.css
@@ -241,7 +241,7 @@ abbr {
 
 /* Forms */
 .form-control-pend {
-  background-color: var(--gw-primary-lighter-color);
+  background-color: var(--gw-primary-lighter-color) !important;
   border: 3px solid var(--gw-dark);
 }
 
